2020-09-04      3.6006  Data updates

2020-06-06      3.6005  Data updates

2020-05-11      3.6004  Data updates;
                        Improved doco on the data update policy :-)

2020-04-27      3.6003  Testing improvements for fork()ing code;
                        Data updates

2020-03-09      3.6002  Data updates

2019-12-11      3.6001  Inmarsat +871 to +874 have been de-commissioned;
                        Added some US overlay codes (not all are in use yet);
                        Data updates

2019-09-12      3.6000  Data updates;
                        UK is_drama() numbers now all respond appropriately
                          to is_mobile, is_tollfree etc, and the mobile range
                          is correctly identified as being UK-wide and not Jersey
                          (see https://github.com/DrHyde/perl-modules-Number-Phone/issues/67);
                        Areaname() sensitive to your locale

2019-06-11      3.5001  Corrected international dialling data for Antarctic
                          research stations;
                        Cleaned up Unicode-spoor in some US operators' names;
                        Numerous new area codes in the US;
                        Doco clarification re incomplete numbers;
                        Data updates

2019-03-03      3.5000  Added operator data for almost all of the NANP;
                        Data updates

2018-12-05      3.4006  Expose libphonenumber's IDD prefix regexes
                          (see https://github.com/DrHyde/perl-modules-Number-Phone/pull/89);
                        New NANP area codes for Jamaica and Canada;
                        Data updates

2018-06-19      3.4005  Improved formatting of UK mobile and pager numbers
                          (see https://github.com/DrHyde/perl-modules-Number-Phone/issues/75);
                        Reinstate Kosovo squatting on +377, +381, and +386, as the change-