@@ -37,6 +37,7 @@ WriteMakefile(
     'Test::More'             => '0.96', # need done_testing (0.88) and subtests (0.95_01)
     'Digest::MD5'            => 0,
     'DBM::Deep'              => 2.0008,
+    'Devel::CheckOS'         => '1.83',
     'Test::utf8'             => 0,
     'File::ShareDir'         => 1.104,
     'File::Spec'             => 0,
